bug fix and complete documentation

--- a/gettysburg.20.html
+++ b/gettysburg.20.html
@@ -85,15 +85,25 @@ body { font-family: Cursive }
 </style>
 </head>
 <body><p>
-<span class="style7">benjamin</span>&nbsp;
-<span class="style5">chris</span>&nbsp;
-<span class="style19">david</span>&nbsp;
-<span class="style14">eric</span>&nbsp;
-<span class="style5">erik</span>&nbsp;
-<span class="style14">james</span>&nbsp;
-<span class="style12">john</span>&nbsp;
-<span class="style2">liana</span>&nbsp;
-<span class="style14">michael</span>&nbsp;
-<span class="style0">trang</span>&nbsp;
+<span class="style5">conceived</span>&nbsp;
+<span class="style10">dead</span>&nbsp;
+<span class="style5">dedicate</span>&nbsp;
+<span class="style14">dedicated</span>&nbsp;
+<span class="style5">devotion</span>&nbsp;
+<span class="style0">freedom</span>&nbsp;
+<span class="style5">gave</span>&nbsp;
+<span class="style10">great</span>&nbsp;
+<span class="style5">living</span>&nbsp;
+<span class="style5">long</span>&nbsp;
+<span class="style5">men</span>&nbsp;
+<span class="style19">nation</span>&nbsp;
+<span class="style5">new</span>&nbsp;
+<span class="style10">people</span>&nbsp;
+<span class="style0">proposition</span>&nbsp;
+<span class="style5">rather</span>&nbsp;
+<span class="style0">remaining</span>&nbsp;
+<span class="style0">remember</span>&nbsp;
+<span class="style0">resolve</span>&nbsp;
+<span class="style5">war</span>&nbsp;
 </p></body>
 </html>
